<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MPG Tracker</string>
    <string name="action_settings">Settings</string>
    <string name="miles_per_gallon">Miles / Gallon</string>
    <string name="odometer">Odometer</string>
    <string name="gas_filled">Gallons Filled</string>
    <string name="full_tank">Full Tank</string>
    <string name="time">Time</string>
    <string name="missing_previous_entry">Missing previous entry</string>
    <string name="unknown">Unknown</string>
    <string name="unknown_mileage">\?</string>
    <string name="empty">Empty!</string>
    <string name="odometer_units">mi</string>
    <string name="gas_units">gal</string>
    <string name="mpg_units">MPG</string>
    <string name="add_entry">Save</string>
    <string name="entry_added">Entry Saved</string>
    <string name="add_remove_car">Add/Remove</string>
    <string name="delete">Delete</string>
    <string name="entry_deleted">Entry Deleted</string>

</resources>
