<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:drawable/dialog_holo_dark_frame"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/odometer"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/odometer"
        android:inputType="numberDecimal"
        android:imeOptions="actionNext" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:layout_gravity="center_horizontal"
        android:text="@string/gas_filled"
        android:layout_marginTop="16dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/gas_filled"
            android:layout_weight="1"
            android:inputType="numberDecimal"
            android:imeOptions="actionDone"
            android:imeActionLabel="@string/add_entry" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/full_tank"
            android:text="@string/full_tank"
            android:checked="true" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="16dp">

        <CheckBox
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/missing_previous_entry"
            android:id="@+id/missing_entry"
            android:layout_weight="1" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/add_entry"
            android:id="@+id/add"
            android:layout_weight="1" />
    </LinearLayout>

</LinearLayout>