<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minHeight="?android:attr/listPreferredItemHeight"
    android:orientation="vertical"
    android:gravity="center_vertical"
    tools:context="com.michael_monaghan.mpgtracker.MainActivity"
    android:paddingTop="8dp"
    android:paddingBottom="8dp">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/odometer"
                android:gravity="center_horizontal"
                android:singleLine="true" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/unknown"
                android:id="@+id/odometer"
                android:gravity="center_horizontal" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/gas_filled"
                android:gravity="center_horizontal"
                android:singleLine="true" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/gas_filled"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/unknown"
                    android:layout_centerHorizontal="true"
                    android:layout_alignParentTop="true" />


                <ImageView
                    android:id="@+id/full_tank"
                    android:layout_width="16sp"
                    android:layout_height="16sp"
                    android:src="@drawable/gas_pump_red"
                    android:layout_toRightOf="@+id/gas_filled"
                    android:layout_toEndOf="@+id/gas_filled"
                    android:layout_alignBaseline="@id/gas_filled"
                    android:baseline="16sp"
                    android:layout_marginLeft="4sp"
                    android:layout_marginStart="4sp" />

            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/miles_per_gallon"
                android:gravity="center_horizontal"
                android:singleLine="true" />

            <TextView
                android:id="@+id/mpg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/unknown"
                android:gravity="center_horizontal" />
        </LinearLayout>

    </LinearLayout>
    <TextView
        android:id="@+id/missing_entry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textAppearance="?android:textAppearanceSmall"
        android:background="#FFFF0000"
        android:textColor="#FF000000"
        android:text="@string/missing_previous_entry"
        android:visibility="visible"/>
</LinearLayout>